--- a/QAT_Tensorflow_GPU_Demo.ipynb
+++ b/QAT_Tensorflow_GPU_Demo.ipynb
@@ -6,7 +6,7 @@
       "name": "QAT Tensorflow GPU Demo.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM5AmC0yXBRc4BfzC1pSBRc",
+      "authorship_tag": "ABX9TyPl4J1Bcy2Q+95ukwVdO/mO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1743,6 +1743,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/srivatsan88/model-deployment/blob/master/QAT_Tensorflow_GPU_Demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ULOJmzzMFkm2",
+        "colab_type": "text"
+      },
+      "source": [
+        "This notebook is code for demo shown in video - https://www.youtube.com/watch?v=4J_FW5xQDUk"
       ]
     },
     {
