--- a/Tensorflow_Model_Quantization.ipynb
+++ b/Tensorflow_Model_Quantization.ipynb
@@ -6,7 +6,7 @@
       "name": "Tensorflow Model Quantization.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVnT2Uf12OP6d8vRs7cCMT",
+      "authorship_tag": "ABX9TyNyPwjkrnaKEHvJQOiLK+xd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/srivatsan88/model-deployment/blob/master/Tensorflow_Model_Quantization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AkQ4ju7-GQkB",
+        "colab_type": "text"
+      },
+      "source": [
+        "This code is demonstrated in video - https://www.youtube.com/watch?v=HOG-o8fbOLk"
       ]
     },
     {
